tests/unit/default/syntax-error/157-alter-table-dot.e.t
---- IN ----
*%table.
---- OUT ----
---- ERR ----
syntax: expected <alter-column> after `*%table.` instead of EOL at position 8 - at line 1
---- EXIT ----
1
